Added RAII homework

--- a/2. RAII/2. RAII/2. RAII.vcxproj
+++ b/2. RAII/2. RAII/2. RAII.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e4da07b4-478d-46c1-a9be-4173d28f4244}</ProjectGuid>
-    <RootNamespace>Linkingandcompiling</RootNamespace>
+    <ProjectGuid>{6face993-4d52-4ff9-bf7e-52ba088fdc6c}</ProjectGuid>
+    <RootNamespace>My2RAII</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FIrstTask.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="allinclude.h" />
+    <ClInclude Include="FirstTask.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
