--- a/21. ORM/CMakeProject1/CMakeProject1/CMakeLists.txt
+++ b/21. ORM/CMakeProject1/CMakeProject1/CMakeLists.txt
@@ -1,25 +1,22 @@
 ﻿cmake_minimum_required(VERSION 3.16)
 project(CMakeProject1)
 
+set(CMAKE_CXX_STANDARD 20)
+
+find_package(wt CONFIG REQUIRED)
+find_package(PostgreSQL REQUIRED)
+find_package(libpqxx CONFIG REQUIRED)
+
 add_executable(CMakeProject1
   "CMakeProject1.cpp"
   "models.cpp"
   "db.cpp"
 )
 
-set_property(TARGET CMakeProject1 PROPERTY CXX_STANDARD 20)
-
-# Include dirs
-target_include_directories(CMakeProject1 PRIVATE
-  "D:/Programs/Dev/vcpkg/installed/x64-windows/include"
-  "D:/Programs/PostgreSQL/17/include"
-)
-
-# Прямые пути к .lib
 target_link_libraries(CMakeProject1 PRIVATE
-  "D:/Programs/Dev/vcpkg/installed/x64-windows/lib/wtdbo.lib"
-  "D:/Programs/Dev/vcpkg/installed/x64-windows/lib/wtdbopostgres.lib"
-  "D:/Programs/Dev/vcpkg/installed/x64-windows/lib/wt.lib"
-  "D:/Programs/PostgreSQL/17/lib/libpq.lib"
-  ws2_32
+  Wt::Wt
+  Wt::Dbo
+  Wt::DboPostgres
+  PostgreSQL::PostgreSQL
+  libpqxx::pqxx
 )
