--- a/35. Counter/Counter/CMakeLists.txt
+++ b/35. Counter/Counter/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(DataBaseController VERSION 0.1 LANGUAGES CXX)
+project(Counter VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,46 +20,37 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(DataBaseController
+    qt_add_executable(Counter
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-
-
-
-
-
-        newconnectiondiaglog.h newconnectiondiaglog.cpp newconnectiondiaglog.ui
-        onlyfortest.h onlyfortest.cpp onlyfortest.ui
-
-
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET DataBaseController APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET Counter APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(DataBaseController SHARED
+        add_library(Counter SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(DataBaseController
+        add_executable(Counter
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(DataBaseController PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Counter PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.DataBaseController)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Counter)
 endif()
-set_target_properties(DataBaseController PROPERTIES
+set_target_properties(Counter PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -68,12 +59,12 @@ set_target_properties(DataBaseController PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS DataBaseController
+install(TARGETS Counter
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(DataBaseController)
+    qt_finalize_executable(Counter)
 endif()
