--- a/36. Stopwatch/Stopwatch/CMakeLists.txt
+++ b/36. Stopwatch/Stopwatch/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Stopwatch
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        stopwatch.h stopwatch.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Stopwatch APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
